--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hapi/hapi": "^21.3.12",
     "@tensorflow/tfjs-node": "^4.22.0",
+    "dotenv": "^16.4.7",
     "joi": "^17.13.3",
     "nodemon": "^3.1.7"
   }
